@@ -1,3 +1,12 @@
+2025-12-31T00:50:42Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20609276019 # 855
+* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-31
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 256 290 / 258 292
+* notice: next accum: outdated-unq outdated-all / unq all: 256 290 / 258 292
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [] / []
+
 2025-12-24T00:48:01Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20475064934 # 848
 * notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-24
